--- a/.classpath
+++ b/.classpath
@@ -3,11 +3,12 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry exported="true" kind="lib" path="/cshome/xiaoran1/Downloads/google-gson-2.2.4/gson-2.2.4-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="/cshome/xiaoran1/Downloads/google-gson-2.2.4/gson-2.2.4-javadoc.jar"/>
-	<classpathentry exported="true" kind="lib" path="/cshome/xiaoran1/Downloads/google-gson-2.2.4/gson-2.2.4.jar"/>
+	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="con" path="com.soyatec.uml.CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="libs/gson-2.2.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gson-2.2.4-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gson-2.2.4-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
